Fix double scrollbars
Resolves #3

--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -5,6 +5,17 @@
   width: calc(100% + 7rem);
   transform: translateX(-3.5rem);
   position: relative;
+  height: 9rem;
+
+  &__timeline {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    h1 {
+      margin: 0;
+    }
+  }
 
   &__list {
     background-color: var(--yellow);
