--- a/src/css/timeline.scss
+++ b/src/css/timeline.scss
@@ -10,7 +10,7 @@
   --beta-highlight: hsla(137, 40%, 56.3%);
   --stable-highlight: hsla(218, 91.7%, 65.3%);
   transform: translateX(-3.5rem);
-  height: calc(100vh - 7rem);
+  height: calc(100vh - 9rem);
   /* grid-row-gap: 1rem; */
   &-wrapper {
     position: relative;
